# greentic-operator

./: Cargo.toml  README.md  answers.json
.codex/: PR-OP-01-wizard-provider-operator-lifecycle.md  PR-OP-01.md  PR-OP-02-wizard-operator.md  PR-OP-02.md  PR-RUN-03.md  PR-RUN-06.md  PR.md  global_rules.md  repo_overview.md
ci/: check_i18n_quality.py  local_check.sh  package_binstall.sh  prepare_publish_workspace.sh
crates/greentic-secrets-repro/: Cargo.toml  README.md
crates/greentic-secrets-repro/src/: lib.rs
crates/greentic-secrets-repro/tests/: roundtrip.rs
crates/messaging-cardkit/: Cargo.toml
docs/: AUDIT_MESSAGING.md  OPERATOR_MESSAGING_PROVIDER_INTEGRATION_GUIDE.md  audit-bundle-creation.md  demo-run.md  release_checklist.md  secrets.md  wizard.md
examples/: fake_gsm_msgraph_subscriptions.rs  fake_nats_server.rs  fake_service.rs
secret_name/: Cargo.toml
src/: bin_resolver.rs  capabilities.rs  cards.rs  cli.rs  cloudflared.rs  component_qa_ops.rs  config.rs  dev_detect.rs  dev_mode.rs  dev_store_path.rs  discovery.rs  doctor.rs  lib.rs  main.rs  operator_i18n.rs  provider_config_envelope.rs  provider_registry.rs  providers.rs  qa_persist.rs  runner_exec.rs  runner_integration.rs  runtime_state.rs  secret_name.rs  secret_value.rs  secrets_gate.rs  secrets_manager.rs  secrets_setup.rs  settings.rs  state_layout.rs  supervisor.rs  wizard.rs  wizard_executor.rs  wizard_i18n.rs  wizard_plan_builder.rs  wizard_spec_builder.rs
tests/: bin_resolver_dev_mode.rs  bin_resolver_global_dev_mode.rs  bin_resolver_hybrid.rs  cli_i18n_render.rs  demo_build.rs  (+28 more)
(+152 files in other folders)
