[package]
name = "messaging-cardkit"
version = "0.1.0"
edition = "2024"
authors = ["Greentic AI"]
license = "MIT"
description = "Standalone MessageCard rendering + downgrade kit for operator/runner consumers."
readme = "README.md"

[dependencies]
anyhow = "1"
serde_json = "1"
gsm-core = "0.4"
insta = { version = "1", optional = true, features = ["json"] }
greentic-types = "0.4"

[features]
default = ["render"]
render = []
